--- a/package.json
+++ b/package.json
@@ -6,24 +6,40 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "test:performance": "ts-node performance-test.ts"
   },
   "dependencies": {
+    "dompurify": "^3.3.1",
     "firebase": "^12.7.0",
     "framer-motion": "^12.23.26",
+    "jsdom": "^27.4.0",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "zod": "^4.2.1"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^16.1.1",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@types/dompurify": "^3.0.5",
+    "@types/fs-extra": "^11.0.4",
+    "@types/glob": "^8.1.0",
+    "@types/jsdom": "^27.0.0",
+    "@types/node": "^20.19.27",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "chrome-launcher": "^1.2.1",
+    "cross-env": "^10.1.0",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
+    "fs-extra": "^11.3.3",
+    "glob": "^13.0.0",
+    "lighthouse": "^12.8.2",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5",
+    "webpack-bundle-analyzer": "^5.1.0"
   }
 }
